--- a/composer.json
+++ b/composer.json
@@ -6,8 +6,8 @@
     "require": {
         "php": ">=5.6.0",
         "guzzlehttp/guzzle": "~6.0",
-        "nesbot/carbon": "^1.23@dev",
-        "vlucas/phpdotenv": "^2.5@dev"
+        "nesbot/carbon": "^1.23",
+        "vlucas/phpdotenv": "^2.5"
     },
     "license": "MIT",
     "authors": [{
@@ -19,7 +19,6 @@
             "PropertyAPI\\": "src/PropertyAPI/"
         }
     },
-    "version": "1.0.0",
     "minimum-stability": "dev",
     "require-dev": {
         "phpunit/phpunit": "^7"
