--- a/composer.json
+++ b/composer.json
@@ -20,7 +20,12 @@
         }
     },
     "minimum-stability": "dev",
+    "config": {
+        "platform": {
+            "php": "5.6.0"
+        }
+    },
     "require-dev": {
-        "phpunit/phpunit": "^7"
+        "phpunit/phpunit": "^5"
     }
 }
