--- a/composer.json
+++ b/composer.json
@@ -7,7 +7,7 @@
         "php": ">=5.6.0",
         "guzzlehttp/guzzle": "~6.0",
         "nesbot/carbon": "^1.23",
-        "vlucas/phpdotenv": "^2.5"
+        "vlucas/phpdotenv": "^2.5@dev"
     },
     "license": "MIT",
     "authors": [{
