--- a/composer.json
+++ b/composer.json
@@ -7,7 +7,7 @@
         "php": ">=5.6.0",
         "guzzlehttp/guzzle": "~6.0",
         "nesbot/carbon": "^1.23",
-        "vlucas/phpdotenv": "^2.5@dev"
+        "vlucas/phpdotenv": "^2.4"
     },
     "license": "MIT",
     "authors": [{
@@ -19,7 +19,7 @@
             "PropertyAPI\\": "src/PropertyAPI/"
         }
     },
-    "minimum-stability": "dev",
+    "minimum-stability": "stable",
     "config": {
         "platform": {
             "php": "5.6.0"
